# rust-renderer

./: Cargo.toml  README.md  buildc.sh  linux-setup.sh
.cargo/: config
.github/workflows/: push.yml
c/: Makefile  build.sh  main.cpp  p0.cpp  p1.cpp  p2.cpp  p3.cpp  xdg_wm.cpp
src/: lib.rs  main.rs  obj.rs  tga.rs
src/platform/linux/: platform_main.rs
src/platform/win32/: platform_lib.rs  platform_main.rs
