[package]
name = "jordan-tinyrenderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "jordan_tinyrenderer"

[[bin]]
name = "jordan-tinyrenderer"
path = "src/main.rs"

[dependencies]
log = "0.4.17"
nom = "7.1.3"
rand = "0.8.5"
simple_logger = "2.1.0"

[target.'cfg(target_os = "linux")'.dependencies.x11-dl]
version = "2.21.0"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.52.0"
features = [
    "Win32",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Performance",
]
